Desenvolvendo micro-cabecalho

--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ADS - IFPB</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    
+    <section id="micro_cabecalho">
+        <div class="alin_micro_cabecalho">
+            <div>
+                <img src="./img/icons/tel_Icon.png" alt="Icon de telefone">
+                <p>(83) 9.9999-9999</p>
+            </div>
+            <div>
+                <img src="./img/icons/email_Icon.png" alt="Icon de email">
+                <p>emaildefault@academico.edu.ifpb.br</p>
+            </div>
+        </div>
+        <div class="alin_micro_cabecalho">
+            <a href="#"><img src="./img/icons/insta_Icon.png" alt="Icon do instagram"></a> 
+            <a href="#"><img src="./img/icons/whats_Icon.png" alt="Icon do whatsapp"></a> 
+            <a href="#"><img src="./img/icons/facebook_Icon.png" alt="Icon do facebook"></a> 
+        </div>
+    </section>
 </body>
 </html>
