Desenvolvendo HTML da homepage

--- a/index.html
+++ b/index.html
@@ -9,22 +9,75 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <section id="micro_cabecalho">
-        <div class="alin_micro_cabecalho">
-            <div>
-                <img src="./img/icons/tel_Icon.png" alt="Icon de telefone">
-                <p>(83) 9.9999-9999</p>
+    <header>
+        <section id="micro_cabecalho">
+            <div class="alin_micro_cabecalho">
+                <div>
+                    <img src="./img/icons/tel_Icon.png" alt="Icon de telefone">
+                    <p>(83) 9.9999-9999</p>
+                </div>
+                <div>
+                    <img src="./img/icons/email_Icon.png" alt="Icon de email">
+                    <p>emaildefault@academico.edu.ifpb.br</p>
+                </div>
             </div>
-            <div>
-                <img src="./img/icons/email_Icon.png" alt="Icon de email">
-                <p>emaildefault@academico.edu.ifpb.br</p>
+            <div class="alin_micro_cabecalho">
+                <a href="#"><img src="./img/icons/insta_Icon.png" alt="Icon do instagram"></a> 
+                <a href="#"><img src="./img/icons/whats_Icon.png" alt="Icon do whatsapp"></a> 
+                <a href="#"><img src="./img/icons/facebook_Icon.png" alt="Icon do facebook"></a> 
             </div>
-        </div>
-        <div class="alin_micro_cabecalho">
-            <a href="#"><img src="./img/icons/insta_Icon.png" alt="Icon do instagram"></a> 
-            <a href="#"><img src="./img/icons/whats_Icon.png" alt="Icon do whatsapp"></a> 
-            <a href="#"><img src="./img/icons/facebook_Icon.png" alt="Icon do facebook"></a> 
-        </div>
-    </section>
+        </section>
+        <section>
+            <div id="cabecalho">
+                <img src="./img/imagensGerais/ifpb_Logo.png" alt="logotipo ifpb">
+                <div class="alin_cabecalho">
+                    <a href="#">INGRESSO</a>
+                    <a href="#">DIFERENCIAIS</a>
+                    <a href="#">LOCALIZAR</a>
+                    <a href="#">CONTATO</a>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="home">
+                <div class="texto_home">
+                    <h1>Análise e Desenvolvimento de <span class="coloracao_verde">Sistemas</span></h1>
+                    <p>Venha fazer parte do time que mais ingressa novos programadores no mercado de trabalho.</p>
+                    <button>FORMAS DE INGRESSO</button>
+                </div>
+                <div>
+                    <img src="./img/imagensGerais/modelo_home1.png" alt="modelo estudante" id="img_modelo_home">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="alinhamento_home">
+                <div class="caixa_home_maior">
+                    <div class="caixa_home">
+                        <img src="./img/icons/local_Icon.png" alt="icone de localização">
+                        <h3>Localização</h3>
+                        <p>R. José Leôncio da Silva, 300. Jardim Oasis</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="caixa_home_maior">
+                    <div class="caixa_home_central">
+                        <img src="./img/icons/local_Icon.png" alt="icone de localização">
+                        <h3>Horários</h3>
+                        <p>Atendimento de segunda à sexta das 8:00hs às 17:00hrs</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+                <div class="caixa_home_maior">
+                    <div class="caixa_home">
+                        <img src="./img/icons/mascara_Icon.png" alt="icone de mascara">
+                        <h3>Prevenção</h3>
+                        <p>Durante sua visita ao Campus, permaneça sempre de máscara</p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </header>
 </body>
 </html>
