Refinando o CSS da Homepage

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                     </div>
                 </div>
                 <div class="caixa_home_maior">
-                    <div class="caixa_home_central">
-                        <img src="./img/icons/local_Icon.png" alt="icone de localização">
+                    <div class="caixa_home" id="caixa_home_central">
+                        <img src="./img/icons/relogio_Icon.png" alt="icone de localização">
                         <h3>Horários</h3>
                         <p>Atendimento de segunda à sexta das 8:00hs às 17:00hrs</p>
                         <button>Saiba Mais</button>
