Adicionando sessão de Onde Encontrar

--- a/index.html
+++ b/index.html
@@ -26,5 +26,18 @@
             <a href="#"><img src="./img/icons/facebook_Icon.png" alt="Icon do facebook"></a> 
         </div>
     </section>
+
+    <section id="sessao_mapas">
+        <div id="alinhamento_mapas">
+            <div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3961.0079753775617!2d-38.547045685378635!3d-6.889647169332904!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7a473a32378c727%3A0x4e45e65b60da5295!2sIFPB%20-%20Campus%20Cajazeiras!5e0!3m2!1spt-PT!2sbr!4v1676133553493!5m2!1spt-PT!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" id="mapa"></iframe>
+            </div>
+            <div class="texto_mapas">
+                <h2>Saiba onde nos <span style="color:#19872C">encontrar</span></h2>
+                <p>Siga o endereço ao lado para saber mais informações sobre o curso.</p>
+                <button href="">FORMAS DE INGRESSO</button>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
