view: Iniciando a página do contato

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
 </head>
+
 <body>
     <section id="micro_cabecalho">
         <div class="alin_micro_cabecalho">
@@ -21,10 +23,27 @@
             </div>
         </div>
         <div class="alin_micro_cabecalho">
-            <a href="#"><img src="./img/icons/insta_Icon.png" alt="Icon do instagram"></a> 
-            <a href="#"><img src="./img/icons/whats_Icon.png" alt="Icon do whatsapp"></a> 
-            <a href="#"><img src="./img/icons/facebook_Icon.png" alt="Icon do facebook"></a> 
+            <a href="#"><img src="./img/icons/insta_Icon.png" alt="Icon do instagram"></a>
+            <a href="#"><img src="./img/icons/whats_Icon.png" alt="Icon do whatsapp"></a>
+            <a href="#"><img src="./img/icons/facebook_Icon.png" alt="Icon do facebook"></a>
+        </div>
+    </section>
+    <section id="contatos">
+        <div class="contatos_content">
+            <div class="texto">
+                <h2>Ficou com alguma<br><span>dúvida?</span></h2>
+                <p>Entre em contato conosco.</p>
+            </div>
+            <form id="form-contatos">
+                <h2>Seu contato é muito<br><span>bem-vindo</span></h2>
+                <p>Nós temos um período para resposta de até 72 horas. Agradecemos o seu contato.</p>
+                <input type="text" placeholder="Nome Completo..." required>
+                <input type="text" placeholder="Email..." required>
+                <textarea id="mensagem" cols="30" rows="5" placeholder="Digite sua Mensagem..." required></textarea>
+                <button>ENVIAR</button>
+            </form>
         </div>
     </section>
 </body>
+
 </html>
