view: Iniciando a Página dos Diferenciais

--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
             <a href="#"><img src="./img/icons/facebook_Icon.png" alt="Icon do facebook"></a> 
         </div>
     </section>
+    <section id="diferencial">
+        <div class="diferencial-content">
+            <div class="texto-diferencial">
+                <h2>O que nos torna o <span>MAIOR</span> curso de tecnologia da Paraíba?</h2>
+                <p>Saiba por que o nosso curso é considerado o maior curso de tecnologia da Paraíba e o terceiro maior do Brasil</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
