--- a/index.html
+++ b/index.html
@@ -9,22 +9,13 @@
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <section id="micro_cabecalho">
-        <div class="alin_micro_cabecalho">
-            <div>
-                <img src="./img/icons/tel_Icon.png" alt="Icon de telefone">
-                <p>(83) 9.9999-9999</p>
-            </div>
-            <div>
-                <img src="./img/icons/email_Icon.png" alt="Icon de email">
-                <p>emaildefault@academico.edu.ifpb.br</p>
-            </div>
-        </div>
-        <div class="alin_micro_cabecalho">
-            <a href="#"><img src="./img/icons/insta_Icon.png" alt="Icon do instagram"></a> 
-            <a href="#"><img src="./img/icons/whats_Icon.png" alt="Icon do whatsapp"></a> 
-            <a href="#"><img src="./img/icons/facebook_Icon.png" alt="Icon do facebook"></a> 
+    <!--Inicio de Ingressos-->
+    <section id="ingressos">
+        <div class="titulo">
+            <h2>FORMAS DE <span>INGRESSO</span></h2>
+            <p>Conheça as formas de ingressos do curso.</p>
         </div>
     </section>
+    </body>
 </body>
 </html>
