view: Finalizando a Página dos Diferenciais

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,31 +9,51 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
 </head>
+
 <body>
-    <section id="micro_cabecalho">
-        <div class="alin_micro_cabecalho">
-            <div>
-                <img src="./img/icons/tel_Icon.png" alt="Icon de telefone">
-                <p>(83) 9.9999-9999</p>
-            </div>
-            <div>
-                <img src="./img/icons/email_Icon.png" alt="Icon de email">
-                <p>emaildefault@academico.edu.ifpb.br</p>
-            </div>
-        </div>
-        <div class="alin_micro_cabecalho">
-            <a href="#"><img src="./img/icons/insta_Icon.png" alt="Icon do instagram"></a> 
-            <a href="#"><img src="./img/icons/whats_Icon.png" alt="Icon do whatsapp"></a> 
-            <a href="#"><img src="./img/icons/facebook_Icon.png" alt="Icon do facebook"></a> 
-        </div>
-    </section>
     <section id="diferencial">
         <div class="diferencial-content">
             <div class="texto-diferencial">
-                <h2>O que nos torna o <span>MAIOR</span> curso de tecnologia da Paraíba?</h2>
-                <p>Saiba por que o nosso curso é considerado o maior curso de tecnologia da Paraíba e o terceiro maior do Brasil</p>
+                <h2>O que nos torna o <br><span>MAIOR</span> curso de <br> tecnologia da Paraíba?</h2>
+                <p>Saiba por que o nosso curso é considerado o maior curso de tecnologia da Paraíba e o terceiro maior
+                    do Brasil.</p>
+            </div>
+            <div class="card-area">
+                <div class="card-section">
+                    <div class="card">
+                        <div class="icons">
+                            <img src="img/icons/estrela 1.png" alt="" srcset="">
+                        </div>
+                        <h2>5</h2>
+                        <h3>Nota máxima no Enade</h3>
+                    </div>
+                    <div class="card">
+                        <div class="icons">
+                            <img src="img/icons/distintivo 1.png" alt="" srcset="">
+                        </div>
+                        <h2>1º</h2>
+                        <h3>Lugar na Paraíba</h3>
+                    </div>
+                </div>
+                <div class="card-section">
+                    <div class="card">
+                        <div class="icons">
+                            <img src="img/icons/carimbo 1.png" alt="" srcset="">
+                        </div>
+                        <h2>300+</h2>
+                        <h3>Integrados no mercado trabalho</h3>
+                    </div>
+                    <div class="card">
+                        <div class="icons">
+                            <img src="img/icons/diplomado 1.png" alt="" srcset="">
+                        </div>
+                        <h2>45+</h2>
+                        <h3>Disciplinas técnicas especializadas</h3>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
 </body>
+
 </html>
