view: Ligando os Links

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <div id="cabecalho">
                 <img src="./img/imagensGerais/ifpb_Logo.png" alt="logotipo ifpb">
                 <div class="alin_cabecalho">
-                    <a href="#">INGRESSO</a>
-                    <a href="#">DIFERENCIAIS</a>
-                    <a href="#">LOCALIZAR</a>
-                    <a href="#">CONTATO</a>
+                    <a href="#ingressos">INGRESSO</a>
+                    <a href="#diferencial">DIFERENCIAIS</a>
+                    <a href="#sessao_mapas">LOCALIZAR</a>
+                    <a href="#contatos">CONTATO</a>
                 </div>
             </div>
         </section>
@@ -45,7 +45,7 @@
                 <div class="texto_home">
                     <h1>Análise e Desenvolvimento de <span class="coloracao_verde">Sistemas</span></h1>
                     <p>Venha fazer parte do time que mais ingressa novos programadores no mercado de trabalho.</p>
-                    <button>FORMAS DE INGRESSO</button>
+                    <a href="#ingressos"><button>FORMAS DE INGRESSO</button></a>
                 </div>
                 <div>
                     <img src="./img/imagensGerais/modelo_home1.png" alt="modelo estudante" id="img_modelo_home">
