view: Ajustando tamnahos nas páginas de contatos e diferenciais

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <section id="diferencial">
         <div class="diferencial-content">
             <div class="texto-diferencial">
-                <h2>O que nos torna o <br><span>MAIOR</span> curso de <br> tecnologia da Paraíba?</h2>
+                <h2>O que nos torna o <span>MAIOR</span> curso de tecnologia da Paraíba?</h2>
                 <p>Saiba por que o nosso curso é considerado o maior curso de tecnologia da Paraíba e o terceiro maior
                     do Brasil.</p>
             </div>
